# twitter-bookmarks

./: .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  bookmarks_2026-02-10.md  pyproject.toml  viewer.html
memory/: 2026-02-11.md  2026-02-14.md  2026-02-15.md
src/twitter_bookmarks/: __init__.py  __main__.py  cli.py  client.py  config.py  converter.py  logging_config.py  markdown.py  models.py  parser.py  state.py
tests/: conftest.py  test_cli.py  test_client.py  test_converter.py  test_markdown.py  test_parser.py  test_state.py
tests/fixtures/: bookmarks_response.json  bookmarks_response_singular_user.json
