[project]
name = "twitter-bookmarks"
version = "0.1.0"
description = "Back up Twitter/X bookmarks to a single markdown file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "tomli-w>=1.0",
]

[project.scripts]
twitter-bookmarks = "twitter_bookmarks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]
